--- a/codegen.yml
+++ b/codegen.yml
@@ -7,6 +7,10 @@ generates:
       - "typescript"
       - "typescript-operations"
       - "typescript-react-apollo"
+    config:
+      maybeValue: T
+      avoidOptionals: true
+
   ./graphql.schema.json:
     plugins:
       - "introspection"
